--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start" : "node src/server.js",
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "build": "npm install"
   },
@@ -22,10 +22,12 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "paystack": "^2.0.1",
     "sharp": "^0.32.6",
